--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^8.6.0",
-    "express": "~4.16.1",
+    "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.3",
     "mongoose": "^6.5.1",
     "morgan": "~1.9.1",
