--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.29.3",
+    "mongodb": "^6.3.0",
     "mongoose": "^6.5.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.13",
